--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,8 @@
 {
-  "dependencies": {    
+  "scripts": {
+  	"dev": "nodemon server.js"
+  },
+  "dependencies": {
     "@faker-js/faker": "^8.0.2",
     "fuse.js": "^6.6.2"
   },
